add get gay button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,5 +10,8 @@
     <input type="text" name="name" id="name">
     <input type="submit" value="Press">
 </form>
+<form action="/getGay" method="get">
+    <input type="submit" value="Get Guy">
+</form>
 </body>
 </html>
