MAIN FIX OF CENTURY

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <input type="text" name="name" id="name">
     <input type="submit" value="Press">
 </form>
-<form action="/getGay" method="get">
+<form action="/getGuy" method="get">
     <input type="submit" value="Get Guy">
 </form>
 </body>
